Changes to RESTSessionCatalog