@@ -18,23 +18,15 @@
  */
 package org.apache.iceberg.rest;
 
-import com.github.benmanes.caffeine.cache.Cache;
-import com.github.benmanes.caffeine.cache.Caffeine;
-import com.github.benmanes.caffeine.cache.RemovalListener;
 import java.io.Closeable;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.time.Duration;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.Future;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.function.Supplier;
 import org.apache.iceberg.BaseTable;
 import org.apache.iceberg.CatalogProperties;
 import org.apache.iceberg.CatalogUtil;
@@ -70,10 +62,9 @@ import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableSet;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.apache.iceberg.relocated.com.google.common.collect.Maps;
-import org.apache.iceberg.rest.auth.AuthConfig;
-import org.apache.iceberg.rest.auth.OAuth2Properties;
-import org.apache.iceberg.rest.auth.OAuth2Util;
-import org.apache.iceberg.rest.auth.OAuth2Util.AuthSession;
+import org.apache.iceberg.rest.auth.AuthManager;
+import org.apache.iceberg.rest.auth.AuthManagers;
+import org.apache.iceberg.rest.auth.AuthSession;
 import org.apache.iceberg.rest.requests.CommitTransactionRequest;
 import org.apache.iceberg.rest.requests.CreateNamespaceRequest;
 import org.apache.iceberg.rest.requests.CreateTableRequest;
@@ -91,12 +82,9 @@ import org.apache.iceberg.rest.responses.ListNamespacesResponse;
 import org.apache.iceberg.rest.responses.ListTablesResponse;
 import org.apache.iceberg.rest.responses.LoadTableResponse;
 import org.apache.iceberg.rest.responses.LoadViewResponse;
-import org.apache.iceberg.rest.responses.OAuthTokenResponse;
 import org.apache.iceberg.rest.responses.UpdateNamespacePropertiesResponse;
 import org.apache.iceberg.util.EnvironmentUtil;
-import org.apache.iceberg.util.Pair;
 import org.apache.iceberg.util.PropertyUtil;
-import org.apache.iceberg.util.ThreadPools;
 import org.apache.iceberg.view.BaseView;
 import org.apache.iceberg.view.ImmutableSQLViewRepresentation;
 import org.apache.iceberg.view.ImmutableViewVersion;
@@ -106,12 +94,9 @@ import org.apache.iceberg.view.ViewMetadata;
 import org.apache.iceberg.view.ViewRepresentation;
 import org.apache.iceberg.view.ViewUtil;
 import org.apache.iceberg.view.ViewVersion;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class RESTSessionCatalog extends BaseViewSessionCatalog
     implements Configurable<Object>, Closeable {
-  private static final Logger LOG = LoggerFactory.getLogger(RESTSessionCatalog.class);
   private static final String DEFAULT_FILE_IO_IMPL = "org.apache.iceberg.io.ResolvingFileIO";
   private static final String REST_METRICS_REPORTING_ENABLED = "rest-metrics-reporting-enabled";
   private static final String REST_SNAPSHOT_LOADING_MODE = "snapshot-loading-mode";
@@ -119,20 +104,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   // server supports view endpoints but doesn't send the "endpoints" field in the ConfigResponse
   static final String VIEW_ENDPOINTS_SUPPORTED = "view-endpoints-supported";
   public static final String REST_PAGE_SIZE = "rest-page-size";
-  private static final List<String> TOKEN_PREFERENCE_ORDER =
-      ImmutableList.of(
-          OAuth2Properties.ID_TOKEN_TYPE,
-          OAuth2Properties.ACCESS_TOKEN_TYPE,
-          OAuth2Properties.JWT_TOKEN_TYPE,
-          OAuth2Properties.SAML2_TOKEN_TYPE,
-          OAuth2Properties.SAML1_TOKEN_TYPE);
-
-  // Auth-related properties that are allowed to be passed to the table session
-  private static final Set<String> TABLE_SESSION_ALLOW_LIST =
-      ImmutableSet.<String>builder()
-          .add(OAuth2Properties.TOKEN)
-          .addAll(TOKEN_PREFERENCE_ORDER)
-          .build();
 
   private static final Set<Endpoint> DEFAULT_ENDPOINTS =
       ImmutableSet.<Endpoint>builder()
@@ -163,11 +134,9 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
   private final Function<Map<String, String>, RESTClient> clientBuilder;
   private final BiFunction<SessionContext, Map<String, String>, FileIO> ioBuilder;
-  private Cache<String, AuthSession> sessions = null;
-  private Cache<String, AuthSession> tableSessions = null;
   private FileIOTracker fileIOTracker = null;
   private AuthSession catalogAuth = null;
-  private boolean keepTokenRefreshed = true;
+  private AuthManager authManager;
   private RESTClient client = null;
   private ResourcePaths paths = null;
   private SnapshotMode snapshotMode = null;
@@ -179,9 +148,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   private CloseableGroup closeables = null;
   private Set<Endpoint> endpoints;
 
-  // a lazy thread pool for token refresh
-  private volatile ScheduledExecutorService refreshExecutor = null;
-
   enum SnapshotMode {
     ALL,
     REFS;
@@ -192,7 +158,14 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   }
 
   public RESTSessionCatalog() {
-    this(config -> HTTPClient.builder(config).uri(config.get(CatalogProperties.URI)).build(), null);
+    this(
+        config -> {
+          HTTPClient.Builder builder =
+              HTTPClient.builder(config).uri(config.get(CatalogProperties.URI));
+          configHeaders(config).forEach(builder::withHeader);
+          return builder.build();
+        },
+        null);
   }
 
   public RESTSessionCatalog(
@@ -203,7 +176,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     this.ioBuilder = ioBuilder;
   }
 
-  @SuppressWarnings("checkstyle:CyclomaticComplexity")
   @Override
   public void initialize(String name, Map<String, String> unresolved) {
     Preconditions.checkArgument(unresolved != null, "Invalid configuration: null");
@@ -212,54 +184,18 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     // catalog service
     Map<String, String> props = EnvironmentUtil.resolveAll(unresolved);
 
-    long startTimeMillis =
-        System.currentTimeMillis(); // keep track of the init start time for token refresh
-    String initToken = props.get(OAuth2Properties.TOKEN);
-    boolean hasInitToken = initToken != null;
+    this.authManager = AuthManagers.loadAuthManager(name, props);
 
-    // fetch auth and config to complete initialization
     ConfigResponse config;
-    OAuthTokenResponse authResponse;
-    String credential = props.get(OAuth2Properties.CREDENTIAL);
-    boolean hasCredential = credential != null && !credential.isEmpty();
-    String scope = props.getOrDefault(OAuth2Properties.SCOPE, OAuth2Properties.CATALOG_SCOPE);
-    Map<String, String> optionalOAuthParams = OAuth2Util.buildOptionalParam(props);
-    if (!props.containsKey(OAuth2Properties.OAUTH2_SERVER_URI)
-        && (hasInitToken || hasCredential)
-        && !PropertyUtil.propertyAsBoolean(props, "rest.sigv4-enabled", false)) {
-      LOG.warn(
-          "Iceberg REST client is missing the OAuth2 server URI configuration and defaults to {}/{}. "
-              + "This automatic fallback will be removed in a future Iceberg release."
-              + "It is recommended to configure the OAuth2 endpoint using the '{}' property to be prepared. "
-              + "This warning will disappear if the OAuth2 endpoint is explicitly configured. "
-              + "See https://github.com/apache/iceberg/issues/10537",
-          RESTUtil.stripTrailingSlash(props.get(CatalogProperties.URI)),
-          ResourcePaths.tokens(),
-          OAuth2Properties.OAUTH2_SERVER_URI);
-    }
-    String oauth2ServerUri =
-        props.getOrDefault(OAuth2Properties.OAUTH2_SERVER_URI, ResourcePaths.tokens());
-    try (RESTClient initClient = clientBuilder.apply(props)) {
-      Map<String, String> initHeaders =
-          RESTUtil.merge(configHeaders(props), OAuth2Util.authHeaders(initToken));
-      if (hasCredential) {
-        authResponse =
-            OAuth2Util.fetchToken(
-                initClient, initHeaders, credential, scope, oauth2ServerUri, optionalOAuthParams);
-        Map<String, String> authHeaders =
-            RESTUtil.merge(initHeaders, OAuth2Util.authHeaders(authResponse.token()));
-        config = fetchConfig(initClient, authHeaders, props);
-      } else {
-        authResponse = null;
-        config = fetchConfig(initClient, initHeaders, props);
-      }
+    try (RESTClient initClient = clientBuilder.apply(props);
+        AuthSession initSession = authManager.preConfigSession(initClient, props)) {
+      config = fetchConfig(initClient, initSession, props);
     } catch (IOException e) {
       throw new UncheckedIOException("Failed to close HTTP client", e);
     }
 
     // build the final configuration and set up the catalog's auth
     Map<String, String> mergedProps = config.merge(props);
-    Map<String, String> baseHeaders = configHeaders(mergedProps);
 
     if (config.endpoints().isEmpty()) {
       this.endpoints =
@@ -273,35 +209,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       this.endpoints = ImmutableSet.copyOf(config.endpoints());
     }
 
-    this.sessions = newSessionCache(mergedProps);
-    this.tableSessions = newSessionCache(mergedProps);
-    this.keepTokenRefreshed =
-        PropertyUtil.propertyAsBoolean(
-            mergedProps,
-            OAuth2Properties.TOKEN_REFRESH_ENABLED,
-            OAuth2Properties.TOKEN_REFRESH_ENABLED_DEFAULT);
     this.client = clientBuilder.apply(mergedProps);
     this.paths = ResourcePaths.forCatalogProperties(mergedProps);
 
-    String token = mergedProps.get(OAuth2Properties.TOKEN);
-    this.catalogAuth =
-        new AuthSession(
-            baseHeaders,
-            AuthConfig.builder()
-                .credential(credential)
-                .scope(scope)
-                .oauth2ServerUri(oauth2ServerUri)
-                .optionalOAuthParams(optionalOAuthParams)
-                .build());
-    if (authResponse != null) {
-      this.catalogAuth =
-          AuthSession.fromTokenResponse(
-              client, tokenRefreshExecutor(name), authResponse, startTimeMillis, catalogAuth);
-    } else if (token != null) {
-      this.catalogAuth =
-          AuthSession.fromAccessToken(
-              client, tokenRefreshExecutor(name), token, expiresAtMillis(mergedProps), catalogAuth);
-    }
+    this.catalogAuth = authManager.catalogSession(client, mergedProps);
 
     this.pageSize = PropertyUtil.propertyAsNullableInt(mergedProps, REST_PAGE_SIZE);
     if (pageSize != null) {
@@ -313,6 +224,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     this.fileIOTracker = new FileIOTracker();
     this.closeables = new CloseableGroup();
+    this.closeables.addCloseable(this.catalogAuth);
+    this.closeables.addCloseable(this.authManager);
     this.closeables.addCloseable(this.io);
     this.closeables.addCloseable(this.client);
     this.closeables.addCloseable(fileIOTracker);
@@ -329,27 +242,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     this.reportingViaRestEnabled =
         PropertyUtil.propertyAsBoolean(mergedProps, REST_METRICS_REPORTING_ENABLED, true);
     super.initialize(name, mergedProps);
-  }
-
-  private AuthSession session(SessionContext context) {
-    AuthSession session =
-        sessions.get(
-            context.sessionId(),
-            id -> {
-              Pair<String, Supplier<AuthSession>> newSession =
-                  newSession(context.credentials(), context.properties(), catalogAuth);
-              if (null != newSession) {
-                return newSession.second().get();
-              }
-
-              return null;
-            });
-
-    return session != null ? session : catalogAuth;
-  }
-
-  private Supplier<Map<String, String>> headers(SessionContext context) {
-    return session(context)::headers;
   }
 
   @Override
@@ -373,13 +265,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
       ListTablesResponse response =
-          client.get(
-              paths.tables(ns),
-              queryParams,
-              ListTablesResponse.class,
-              headers(context),
-              ErrorHandlers.namespaceErrorHandler());
+          client
+              .withAuthSession(authSession)
+              .get(
+                  paths.tables(ns),
+                  queryParams,
+                  ListTablesResponse.class,
+                  Map.of(),
+                  ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       tables.addAll(response.identifiers());
     } while (pageToken != null);
@@ -393,8 +288,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkIdentifierIsValid(identifier);
 
     try {
-      client.delete(
-          paths.table(identifier), null, headers(context), ErrorHandlers.tableErrorHandler());
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(authSession)
+          .delete(paths.table(identifier), null, Map.of(), ErrorHandlers.tableErrorHandler());
       return true;
     } catch (NoSuchTableException e) {
       return false;
@@ -407,12 +304,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkIdentifierIsValid(identifier);
 
     try {
-      client.delete(
-          paths.table(identifier),
-          ImmutableMap.of("purgeRequested", "true"),
-          null,
-          headers(context),
-          ErrorHandlers.tableErrorHandler());
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(authSession)
+          .delete(
+              paths.table(identifier),
+              ImmutableMap.of("purgeRequested", "true"),
+              null,
+              Map.of(),
+              ErrorHandlers.tableErrorHandler());
       return true;
     } catch (NoSuchTableException e) {
       return false;
@@ -429,7 +329,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         RenameTableRequest.builder().withSource(from).withDestination(to).build();
 
     // for now, ignore the response because there is no way to return it
-    client.post(paths.rename(), request, null, headers(context), ErrorHandlers.tableErrorHandler());
+    AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(authSession)
+        .post(paths.rename(), request, null, Map.of(), ErrorHandlers.tableErrorHandler());
   }
 
   @Override
@@ -447,12 +350,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   private LoadTableResponse loadInternal(
       SessionContext context, TableIdentifier identifier, SnapshotMode mode) {
     Endpoint.check(endpoints, Endpoint.V1_LOAD_TABLE);
-    return client.get(
-        paths.table(identifier),
-        mode.params(),
-        LoadTableResponse.class,
-        headers(context),
-        ErrorHandlers.tableErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    return client
+        .withAuthSession(contextualSession)
+        .get(
+            paths.table(identifier),
+            mode.params(),
+            LoadTableResponse.class,
+            Map.of(),
+            ErrorHandlers.tableErrorHandler());
   }
 
   @Override
@@ -494,7 +400,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     TableIdentifier finalIdentifier = loadedIdent;
-    AuthSession session = tableSession(response.config(), session(context));
+    Map<String, String> tableConf = response.config();
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    AuthSession tableSession =
+        authManager.tableSession(finalIdentifier, tableConf, contextualSession);
     TableMetadata tableMetadata;
 
     if (snapshotMode == SnapshotMode.REFS) {
@@ -513,11 +422,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       tableMetadata = response.tableMetadata();
     }
 
+    RESTClient tableClient = client.withAuthSession(tableSession);
     RESTTableOperations ops =
         new RESTTableOperations(
-            client,
+            tableClient,
             paths.table(finalIdentifier),
-            session::headers,
+            Map::of,
             tableFileIO(context, response.config()),
             tableMetadata,
             endpoints);
@@ -528,7 +438,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         new BaseTable(
             ops,
             fullTableName(finalIdentifier),
-            metricsReporter(paths.metrics(finalIdentifier), session::headers));
+            metricsReporter(paths.metrics(finalIdentifier), tableClient));
     if (metadataType != null) {
       return MetadataTableUtils.createMetadataTableInstance(table, metadataType);
     }
@@ -542,11 +452,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
   }
 
-  private MetricsReporter metricsReporter(
-      String metricsEndpoint, Supplier<Map<String, String>> headers) {
+  private MetricsReporter metricsReporter(String metricsEndpoint, RESTClient restClient) {
     if (reportingViaRestEnabled && endpoints.contains(Endpoint.V1_REPORT_METRICS)) {
       RESTMetricsReporter restMetricsReporter =
-          new RESTMetricsReporter(client, metricsEndpoint, headers);
+          new RESTMetricsReporter(restClient, metricsEndpoint, Map::of);
       return MetricsReporters.combine(reporter, restMetricsReporter);
     } else {
       return this.reporter;
@@ -579,20 +488,25 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
             .metadataLocation(metadataFileLocation)
             .build();
 
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     LoadTableResponse response =
-        client.post(
-            paths.register(ident.namespace()),
-            request,
-            LoadTableResponse.class,
-            headers(context),
-            ErrorHandlers.tableErrorHandler());
+        client
+            .withAuthSession(contextualSession)
+            .post(
+                paths.register(ident.namespace()),
+                request,
+                LoadTableResponse.class,
+                Map.of(),
+                ErrorHandlers.tableErrorHandler());
 
-    AuthSession session = tableSession(response.config(), session(context));
+    Map<String, String> tableConf = response.config();
+    AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+    RESTClient tableClient = client.withAuthSession(tableSession);
     RESTTableOperations ops =
         new RESTTableOperations(
-            client,
+            tableClient,
             paths.table(ident),
-            session::headers,
+            Map::of,
             tableFileIO(context, response.config()),
             response.tableMetadata(),
             endpoints);
@@ -600,7 +514,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     trackFileIO(ops);
 
     return new BaseTable(
-        ops, fullTableName(ident), metricsReporter(paths.metrics(ident), session::headers));
+        ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
   }
 
   @Override
@@ -611,12 +525,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         CreateNamespaceRequest.builder().withNamespace(namespace).setProperties(metadata).build();
 
     // for now, ignore the response because there is no way to return it
-    client.post(
-        paths.namespaces(),
-        request,
-        CreateNamespaceResponse.class,
-        headers(context),
-        ErrorHandlers.namespaceErrorHandler());
+    AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(authSession)
+        .post(
+            paths.namespaces(),
+            request,
+            CreateNamespaceResponse.class,
+            Map.of(),
+            ErrorHandlers.namespaceErrorHandler());
   }
 
   @Override
@@ -638,13 +555,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
       ListNamespacesResponse response =
-          client.get(
-              paths.namespaces(),
-              queryParams,
-              ListNamespacesResponse.class,
-              headers(context),
-              ErrorHandlers.namespaceErrorHandler());
+          client
+              .withAuthSession(authSession)
+              .get(
+                  paths.namespaces(),
+                  queryParams,
+                  ListNamespacesResponse.class,
+                  Map.of(),
+                  ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       namespaces.addAll(response.namespaces());
     } while (pageToken != null);
@@ -658,12 +578,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkNamespaceIsValid(ns);
 
     // TODO: rename to LoadNamespaceResponse?
+    AuthSession authSession = authManager.contextualSession(context, catalogAuth);
     GetNamespaceResponse response =
-        client.get(
-            paths.namespace(ns),
-            GetNamespaceResponse.class,
-            headers(context),
-            ErrorHandlers.namespaceErrorHandler());
+        client
+            .withAuthSession(authSession)
+            .get(
+                paths.namespace(ns),
+                GetNamespaceResponse.class,
+                Map.of(),
+                ErrorHandlers.namespaceErrorHandler());
     return response.properties();
   }
 
@@ -673,8 +596,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkNamespaceIsValid(ns);
 
     try {
-      client.delete(
-          paths.namespace(ns), null, headers(context), ErrorHandlers.namespaceErrorHandler());
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(authSession)
+          .delete(paths.namespace(ns), null, Map.of(), ErrorHandlers.namespaceErrorHandler());
       return true;
     } catch (NoSuchNamespaceException e) {
       return false;
@@ -690,63 +615,24 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     UpdateNamespacePropertiesRequest request =
         UpdateNamespacePropertiesRequest.builder().updateAll(updates).removeAll(removals).build();
 
+    AuthSession authSession = authManager.contextualSession(context, catalogAuth);
     UpdateNamespacePropertiesResponse response =
-        client.post(
-            paths.namespaceProperties(ns),
-            request,
-            UpdateNamespacePropertiesResponse.class,
-            headers(context),
-            ErrorHandlers.namespaceErrorHandler());
+        client
+            .withAuthSession(authSession)
+            .post(
+                paths.namespaceProperties(ns),
+                request,
+                UpdateNamespacePropertiesResponse.class,
+                Map.of(),
+                ErrorHandlers.namespaceErrorHandler());
 
     return !response.updated().isEmpty();
   }
 
-  private ScheduledExecutorService tokenRefreshExecutor(String catalogName) {
-    if (!keepTokenRefreshed) {
-      return null;
-    }
-
-    if (refreshExecutor == null) {
-      synchronized (this) {
-        if (refreshExecutor == null) {
-          this.refreshExecutor = ThreadPools.newScheduledPool(catalogName + "-token-refresh", 1);
-        }
-      }
-    }
-
-    return refreshExecutor;
-  }
-
   @Override
   public void close() throws IOException {
-    shutdownRefreshExecutor();
-
     if (closeables != null) {
       closeables.close();
-    }
-  }
-
-  private void shutdownRefreshExecutor() {
-    if (refreshExecutor != null) {
-      ScheduledExecutorService service = refreshExecutor;
-      this.refreshExecutor = null;
-
-      List<Runnable> tasks = service.shutdownNow();
-      tasks.forEach(
-          task -> {
-            if (task instanceof Future) {
-              ((Future<?>) task).cancel(true);
-            }
-          });
-
-      try {
-        if (!service.awaitTermination(1, TimeUnit.MINUTES)) {
-          LOG.warn("Timed out waiting for refresh executor to terminate");
-        }
-      } catch (InterruptedException e) {
-        LOG.warn("Interrupted while waiting for refresh executor to terminate", e);
-        Thread.currentThread().interrupt();
-      }
     }
   }
 
@@ -812,20 +698,25 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .setProperties(propertiesBuilder.build())
               .build();
 
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       LoadTableResponse response =
-          client.post(
-              paths.tables(ident.namespace()),
-              request,
-              LoadTableResponse.class,
-              headers(context),
-              ErrorHandlers.tableErrorHandler());
+          client
+              .withAuthSession(contextualSession)
+              .post(
+                  paths.tables(ident.namespace()),
+                  request,
+                  LoadTableResponse.class,
+                  Map.of(),
+                  ErrorHandlers.tableErrorHandler());
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              client,
+              tableClient,
               paths.table(ident),
-              session::headers,
+              Map::of,
               tableFileIO(context, response.config()),
               response.tableMetadata(),
               endpoints);
@@ -833,7 +724,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       trackFileIO(ops);
 
       return new BaseTable(
-          ops, fullTableName(ident), metricsReporter(paths.metrics(ident), session::headers));
+          ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
     }
 
     @Override
@@ -842,14 +733,17 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       LoadTableResponse response = stageCreate();
       String fullName = fullTableName(ident);
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession parent = authManager.contextualSession(context, catalogAuth);
+      AuthSession tableSession = authManager.tableSession(ident, tableConf, parent);
       TableMetadata meta = response.tableMetadata();
 
+      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              client,
+              tableClient,
               paths.table(ident),
-              session::headers,
+              Map::of,
               tableFileIO(context, response.config()),
               RESTTableOperations.UpdateType.CREATE,
               createChanges(meta),
@@ -859,7 +753,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       trackFileIO(ops);
 
       return Transactions.createTableTransaction(
-          fullName, ops, meta, metricsReporter(paths.metrics(ident), session::headers));
+          fullName, ops, meta, metricsReporter(paths.metrics(ident), tableClient));
     }
 
     @Override
@@ -872,7 +766,9 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       LoadTableResponse response = loadInternal(context, ident, snapshotMode);
       String fullName = fullTableName(ident);
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession parent = authManager.contextualSession(context, catalogAuth);
+      AuthSession tableSession = authManager.tableSession(ident, tableConf, parent);
       TableMetadata base = response.tableMetadata();
 
       Map<String, String> tableProperties = propertiesBuilder.build();
@@ -904,11 +800,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         changes.add(new MetadataUpdate.SetDefaultSortOrder(replacement.defaultSortOrderId()));
       }
 
+      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              client,
+              tableClient,
               paths.table(ident),
-              session::headers,
+              Map::of,
               tableFileIO(context, response.config()),
               RESTTableOperations.UpdateType.REPLACE,
               changes.build(),
@@ -918,7 +815,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       trackFileIO(ops);
 
       return Transactions.replaceTableTransaction(
-          fullName, ops, replacement, metricsReporter(paths.metrics(ident), session::headers));
+          fullName, ops, replacement, metricsReporter(paths.metrics(ident), tableClient));
     }
 
     @Override
@@ -950,12 +847,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .setProperties(tableProperties)
               .build();
 
-      return client.post(
-          paths.tables(ident.namespace()),
-          request,
-          LoadTableResponse.class,
-          headers(context),
-          ErrorHandlers.tableErrorHandler());
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+      return client
+          .withAuthSession(authSession)
+          .post(
+              paths.tables(ident.namespace()),
+              request,
+              LoadTableResponse.class,
+              Map.of(),
+              ErrorHandlers.tableErrorHandler());
     }
   }
 
@@ -1021,26 +921,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     return newFileIO(context, fullConf);
   }
 
-  private AuthSession tableSession(Map<String, String> tableConf, AuthSession parent) {
-    Map<String, String> credentials = Maps.newHashMapWithExpectedSize(tableConf.size());
-    for (String prop : tableConf.keySet()) {
-      if (TABLE_SESSION_ALLOW_LIST.contains(prop)) {
-        credentials.put(prop, tableConf.get(prop));
-      }
-    }
-
-    Pair<String, Supplier<AuthSession>> newSession = newSession(credentials, tableConf, parent);
-    if (null == newSession) {
-      return parent;
-    }
-
-    AuthSession session = tableSessions.get(newSession.first(), id -> newSession.second().get());
-
-    return session != null ? session : parent;
-  }
-
   private static ConfigResponse fetchConfig(
-      RESTClient client, Map<String, String> headers, Map<String, String> properties) {
+      RESTClient client, AuthSession initialAuth, Map<String, String> properties) {
     // send the client's warehouse location to the service to keep in sync
     // this is needed for cases where the warehouse is configured client side, but may be used on
     // the server side,
@@ -1054,74 +936,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     ConfigResponse configResponse =
-        client.get(
-            ResourcePaths.config(),
-            queryParams.build(),
-            ConfigResponse.class,
-            headers,
-            ErrorHandlers.defaultErrorHandler());
+        client
+            .withAuthSession(initialAuth)
+            .get(
+                ResourcePaths.config(),
+                queryParams.build(),
+                ConfigResponse.class,
+                configHeaders(properties),
+                ErrorHandlers.defaultErrorHandler());
     configResponse.validate();
     return configResponse;
-  }
-
-  private Pair<String, Supplier<AuthSession>> newSession(
-      Map<String, String> credentials, Map<String, String> properties, AuthSession parent) {
-    if (credentials != null) {
-      // use the bearer token without exchanging
-      if (credentials.containsKey(OAuth2Properties.TOKEN)) {
-        return Pair.of(
-            credentials.get(OAuth2Properties.TOKEN),
-            () ->
-                AuthSession.fromAccessToken(
-                    client,
-                    tokenRefreshExecutor(name()),
-                    credentials.get(OAuth2Properties.TOKEN),
-                    expiresAtMillis(properties),
-                    parent));
-      }
-
-      if (credentials.containsKey(OAuth2Properties.CREDENTIAL)) {
-        // fetch a token using the client credentials flow
-        return Pair.of(
-            credentials.get(OAuth2Properties.CREDENTIAL),
-            () ->
-                AuthSession.fromCredential(
-                    client,
-                    tokenRefreshExecutor(name()),
-                    credentials.get(OAuth2Properties.CREDENTIAL),
-                    parent));
-      }
-
-      for (String tokenType : TOKEN_PREFERENCE_ORDER) {
-        if (credentials.containsKey(tokenType)) {
-          // exchange the token for an access token using the token exchange flow
-          return Pair.of(
-              credentials.get(tokenType),
-              () ->
-                  AuthSession.fromTokenExchange(
-                      client,
-                      tokenRefreshExecutor(name()),
-                      credentials.get(tokenType),
-                      tokenType,
-                      parent));
-        }
-      }
-    }
-
-    return null;
-  }
-
-  private Long expiresAtMillis(Map<String, String> properties) {
-    if (properties.containsKey(OAuth2Properties.TOKEN_EXPIRES_IN_MS)) {
-      long expiresInMillis =
-          PropertyUtil.propertyAsLong(
-              properties,
-              OAuth2Properties.TOKEN_EXPIRES_IN_MS,
-              OAuth2Properties.TOKEN_EXPIRES_IN_MS_DEFAULT);
-      return System.currentTimeMillis() + expiresInMillis;
-    } else {
-      return null;
-    }
   }
 
   private void checkIdentifierIsValid(TableIdentifier tableIdentifier) {
@@ -1146,25 +970,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     return RESTUtil.extractPrefixMap(properties, "header.");
   }
 
-  private static Cache<String, AuthSession> newSessionCache(Map<String, String> properties) {
-    long expirationIntervalMs =
-        PropertyUtil.propertyAsLong(
-            properties,
-            CatalogProperties.AUTH_SESSION_TIMEOUT_MS,
-            CatalogProperties.AUTH_SESSION_TIMEOUT_MS_DEFAULT);
-
-    return Caffeine.newBuilder()
-        .expireAfterAccess(Duration.ofMillis(expirationIntervalMs))
-        .removalListener(
-            (RemovalListener<String, AuthSession>)
-                (id, auth, cause) -> {
-                  if (auth != null) {
-                    auth.stopRefreshing();
-                  }
-                })
-        .build();
-  }
-
   public void commitTransaction(SessionContext context, List<TableCommit> commits) {
     Endpoint.check(endpoints, Endpoint.V1_COMMIT_TRANSACTION);
     List<UpdateTableRequest> tableChanges = Lists.newArrayListWithCapacity(commits.size());
@@ -1174,12 +979,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
           UpdateTableRequest.create(commit.identifier(), commit.requirements(), commit.updates()));
     }
 
-    client.post(
-        paths.commitTransaction(),
-        new CommitTransactionRequest(tableChanges),
-        null,
-        headers(context),
-        ErrorHandlers.tableCommitHandler());
+    AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(authSession)
+        .post(
+            paths.commitTransaction(),
+            new CommitTransactionRequest(tableChanges),
+            null,
+            Map.of(),
+            ErrorHandlers.tableCommitHandler());
   }
 
   @Override
@@ -1198,13 +1006,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
       ListTablesResponse response =
-          client.get(
-              paths.views(namespace),
-              queryParams,
-              ListTablesResponse.class,
-              headers(context),
-              ErrorHandlers.namespaceErrorHandler());
+          client
+              .withAuthSession(authSession)
+              .get(
+                  paths.views(namespace),
+                  queryParams,
+                  ListTablesResponse.class,
+                  Map.of(),
+                  ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       views.addAll(response.identifiers());
     } while (pageToken != null);
@@ -1224,19 +1035,23 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     checkViewIdentifierIsValid(identifier);
 
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     LoadViewResponse response =
-        client.get(
-            paths.view(identifier),
-            LoadViewResponse.class,
-            headers(context),
-            ErrorHandlers.viewErrorHandler());
+        client
+            .withAuthSession(contextualSession)
+            .get(
+                paths.view(identifier),
+                LoadViewResponse.class,
+                Map.of(),
+                ErrorHandlers.viewErrorHandler());
 
-    AuthSession session = tableSession(response.config(), session(context));
+    Map<String, String> tableConf = response.config();
+    AuthSession session = authManager.tableSession(identifier, tableConf, contextualSession);
     ViewMetadata metadata = response.metadata();
 
     RESTViewOperations ops =
         new RESTViewOperations(
-            client, paths.view(identifier), session::headers, metadata, endpoints);
+            client.withAuthSession(session), paths.view(identifier), Map::of, metadata, endpoints);
 
     return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
   }
@@ -1252,8 +1067,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkViewIdentifierIsValid(identifier);
 
     try {
-      client.delete(
-          paths.view(identifier), null, headers(context), ErrorHandlers.viewErrorHandler());
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(authSession)
+          .delete(paths.view(identifier), null, Map.of(), ErrorHandlers.viewErrorHandler());
       return true;
     } catch (NoSuchViewException e) {
       return false;
@@ -1269,8 +1086,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     RenameTableRequest request =
         RenameTableRequest.builder().withSource(from).withDestination(to).build();
 
-    client.post(
-        paths.renameView(), request, null, headers(context), ErrorHandlers.viewErrorHandler());
+    AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(authSession)
+        .post(paths.renameView(), request, null, Map.of(), ErrorHandlers.viewErrorHandler());
   }
 
   private class RESTViewBuilder implements ViewBuilder {
@@ -1361,18 +1180,26 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .properties(properties)
               .build();
 
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       LoadViewResponse response =
-          client.post(
-              paths.views(identifier.namespace()),
-              request,
-              LoadViewResponse.class,
-              headers(context),
-              ErrorHandlers.viewErrorHandler());
+          client
+              .withAuthSession(contextualSession)
+              .post(
+                  paths.views(identifier.namespace()),
+                  request,
+                  LoadViewResponse.class,
+                  Map.of(),
+                  ErrorHandlers.viewErrorHandler());
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession session = authManager.tableSession(identifier, tableConf, contextualSession);
       RESTViewOperations ops =
           new RESTViewOperations(
-              client, paths.view(identifier), session::headers, response.metadata(), endpoints);
+              client.withAuthSession(session),
+              paths.view(identifier),
+              Map::of,
+              response.metadata(),
+              endpoints);
 
       return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
     }
@@ -1404,11 +1231,14 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
                   "Unable to load view %s.%s: Server does not support endpoint %s",
                   name(), identifier, Endpoint.V1_LOAD_VIEW));
 
-      return client.get(
-          paths.view(identifier),
-          LoadViewResponse.class,
-          headers(context),
-          ErrorHandlers.viewErrorHandler());
+      AuthSession authSession = authManager.contextualSession(context, catalogAuth);
+      return client
+          .withAuthSession(authSession)
+          .get(
+              paths.view(identifier),
+              LoadViewResponse.class,
+              Map.of(),
+              ErrorHandlers.viewErrorHandler());
     }
 
     private View replace(LoadViewResponse response) {
@@ -1449,10 +1279,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
       ViewMetadata replacement = builder.build();
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession parent = authManager.contextualSession(context, catalogAuth);
+      AuthSession session = authManager.tableSession(identifier, tableConf, parent);
       RESTViewOperations ops =
           new RESTViewOperations(
-              client, paths.view(identifier), session::headers, metadata, endpoints);
+              client.withAuthSession(session),
+              paths.view(identifier),
+              Map::of,
+              metadata,
+              endpoints);
 
       ops.commit(metadata, replacement);
 
